@@ -1,0 +1,3 @@
+id,name,attribute
+1,エクスカリバー,5
+2,村正,
